--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 @import 'tailwindcss';
+
+@font-face {
+  font-family: "Black Ops One";
+  src: url("/fonts/BlackOpsOne-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
 /* Prevent unintended horizontal scrolling while keeping inner horizontal scrollers usable */
 /* Avoid forcing horizontal clipping globally; fix overflow at source instead. */
