--- a/app/css/style.css
+++ b/app/css/style.css
@@ -23,8 +23,9 @@
 }
 
 @theme {
-  --font-inter: Inter, sans-serif;
-  --font-nacelle: Nacelle, sans-serif;
+  /* Map existing font tokens to Poppins sitewide */
+  --font-inter: var(--font-poppins);
+  --font-nacelle: var(--font-poppins);
 
   --text-xs: 0.8125rem;
   --text-xs--line-height: 1.5384;
